--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body {
     background:black;
 }
-.navbar {
+.navbar .navLinks {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    border: 5px solid white;
+    flex-direction: row;
+    /* align-items:center; */
+    justify-content: center;
+    /* width: 100%; */
+    /* border: 5px solid white; */
     
 }
+
+/* .navLinks {
+    order: 5;
+} */
 
 .navbar a {
     list-style: none;
@@ -19,7 +24,12 @@ body {
 }
 
 .navbar a:hover {
-    color:black;
+    color:#B95696;
+    /* text-decoration: underline; */
+}
+
+.navbar a:visited {
+    color:#5C0501;
     text-decoration: underline;
 }
 
