--- a/style.css
+++ b/style.css
@@ -31,19 +31,25 @@ body {
 
 .footnav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: 100%;
-    border: 5px solid white;
 }
 
 .footnav a {
     list-style: none;
     display: flex;
-    background-color: blueviolet;
-    color: white;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: #5C0501;
+    color: #f18c00;
     text-decoration: none;
     font-weight: bold;
+    margin: 10px;
+    padding: 1rem 2rem;
+    border-radius: 10px;
 }
 
 .footnav a:hover {
@@ -53,7 +59,14 @@ body {
 }
 
 .footnav section {
+    flex-direction: column;
     border-bottom: 4px solid #f18c00;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top: #f18c00 4px solid;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    justify-content: center;
 }
 
 p {
