added images and body html

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
     background:black;
+    display: flex;
 }
+
+.image-gallery {
+    flex-direction: row;
+}
+
 .navbar .navLinks {
     display: flex;
     flex-direction: row;
