--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background:black;
     display: flex;
 }
-
+*/corbin put this comment here
 .image-gallery {
     flex-direction: row;
 }
